--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.2.0.RELEASE'
+	compile group: 'net.sourceforge.nekohtml', name: 'nekohtml', version: '1.9.22'
 }
